# TradeAutomation

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HANDOFF.md  PLAN.md  PRD.md  README.md  alembic.ini  architecture.md  docker-compose.yml  lessons.md  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py  routes_backtest.py  routes_config.py  routes_dashboard.py  routes_events.py  routes_health.py  routes_instruments.py  routes_llm.py  routes_market.py  routes_news.py  routes_optimizer.py  routes_orders.py  routes_paper.py  routes_positions.py  routes_risk.py  routes_strategies.py  routes_trades.py
app/core/: config.py  enums.py  exceptions.py  logging.py
app/db/: base.py  session.py
app/exchanges/: base.py  bybit_perp_exchange.py  ccxt_client_cache.py  ccxt_exchange.py  paper_exchange.py
app/ml/: features.py  model_store.py  predict.py  train.py
app/schemas/: backtest.py  common.py  dashboard.py  instrument.py  llm.py  market.py  news.py  optimizer.py  order.py  position.py  strategy.py  trade.py
app/services/: backtest_service.py  bybit_stream_service.py  dashboard_service.py  helpers.py  (+12 more)
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
migrations/: env.py
scripts/: __init__.py  analyze_paper_trades.py  demo_paper_trade.py  reset_paper_state.py  run_backtest.py  seed_data.py  train_model.py  tune_demo_mode.py
tests/: conftest.py  test_backtest.py  test_config.py  test_expansion.py  test_health.py  test_paper_exchange.py  test_risk.py  test_strategies.py
(+44 files in other folders)
