[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-automation-mvp"
version = "0.1.0"
description = "Safety-first crypto trading automation MVP with FastAPI, backtesting, paper trading, and optional live execution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "alembic>=1.13.2,<2.0.0",
  "apscheduler>=3.10.4,<4.0.0",
  "ccxt>=4.4.0,<5.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "joblib>=1.4.2,<2.0.0",
  "lightgbm>=4.5.0,<5.0.0",
  "numpy>=1.26.4,<3.0.0",
  "pandas>=2.2.3,<3.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "pydantic>=2.9.2,<3.0.0",
  "pydantic-settings>=2.5.2,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "redis>=5.1.1,<6.0.0",
  "scikit-learn>=1.5.2,<2.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2,<1.0.0",
  "pytest>=8.3.3,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
